# ai_study

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt
.jupyter/: migrated
data/processed/: .gitkeep
data/raw/: .gitkeep  train.csv
models/: .gitkeep
notebooks/: 01_Single_Variable_Linear_Regression.ipynb  01_eda.ipynb
scripts/: debug_nb.py  split_nb_cells.py  split_notebook_cells.py  start_jupyter.sh
src/: __init__.py  data_loader.py  model.py  train.py  utils.py
tests/: test_data_loader.py  test_model.py  test_utils.py
